--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                     высоким качеством!
                 </div>
             </div>
-            <!-- <div class="tabcontent">
+               <div class="tabcontent">
                 <img src="img/tabs/elite.jpg" alt="elite">
                 <div class="tabcontent__descr">
                     Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!
                 </div>
             </div> -->
-            <!-- <div class="tabcontent">
+             <div class="tabcontent">
                 <img src="img/tabs/post.jpg" alt="post">
                 <div class="tabcontent__descr">
                     Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!
