--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="tabcontent__descr">
                     Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!
                 </div>
-            </div> -->
+            </div>
              <div class="tabcontent">
                 <img src="img/tabs/post.jpg" alt="post">
                 <div class="tabcontent__descr">
@@ -63,7 +63,7 @@
                 <div class="tabcontent__descr">
                     Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
                 </div>
-            </div> -->
+            </div>
             <div class="tabheader">
                 <h3>Выберите стиль питания</h3>
                 <div class="tabheader__items">
@@ -124,7 +124,7 @@
                 <div class="offer__slide">
                     <img src="img/slider/pepper.jpg" alt="pepper">
                 </div>
-                <!-- <div class="offer__slide">
+                <div class="offer__slide">
                     <img src="img/slider/food-12.jpg" alt="food">
                 </div>
                 <div class="offer__slide">
@@ -132,7 +132,7 @@
                 </div>
                 <div class="offer__slide">
                     <img src="img/slider/paprika.jpg" alt="paprika">
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
@@ -319,6 +319,6 @@
     </div>
 </div>
 
-<script src="js/script.js"></script>
+<script src="img/tabs/vegy.jpg"></script>
 </body>
 </html>
