--- a/index.html
+++ b/index.html
@@ -46,22 +46,25 @@
                     высоким качеством!
                 </div>
             </div>
-               <div class="tabcontent">
+            <div class="tabcontent">
                 <img src="img/tabs/elite.jpg" alt="elite">
                 <div class="tabcontent__descr">
-                    Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!
+                    Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение
+                    блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!
                 </div>
             </div>
-             <div class="tabcontent">
+            <div class="tabcontent">
                 <img src="img/tabs/post.jpg" alt="post">
                 <div class="tabcontent__descr">
-                    Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!
+                    Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов
+                    животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!
                 </div>
             </div>
             <div class="tabcontent">
                 <img src="img/tabs/vegy.jpg" alt="vegy">
                 <div class="tabcontent__descr">
-                    Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
+                    Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно
+                    просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
                 </div>
             </div>
             <div class="tabheader">
@@ -320,5 +323,6 @@
 </div>
 
 <script src="js/script.js"></script>
+
 </body>
 </html>
