--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <header class="header">
     <div class="header__left-block">
         <div class="header__logo">
@@ -22,7 +21,6 @@
         <button data-modal class="btn btn_white">Связаться с нами</button>
     </div>
 </header>
-
 <div class="sidepanel">
     <div class="sidepanel__text"><span>Социальные сети</span></div>
     <div class="sidepanel__divider"></div>
@@ -41,30 +39,25 @@
             <div class="tabcontent">
                 <img src="img/tabs/vegy.jpg" alt="vegy">
                 <div class="tabcontent__descr">
-                    Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей,
-                    которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и
-                    высоким качеством!
+                    Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей, которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!
                 </div>
             </div>
             <div class="tabcontent">
                 <img src="img/tabs/elite.jpg" alt="elite">
                 <div class="tabcontent__descr">
-                    Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение
-                    блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!
+                    Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!
                 </div>
             </div>
             <div class="tabcontent">
                 <img src="img/tabs/post.jpg" alt="post">
                 <div class="tabcontent__descr">
-                    Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов
-                    животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!
+                    Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!
                 </div>
             </div>
             <div class="tabcontent">
                 <img src="img/tabs/vegy.jpg" alt="vegy">
                 <div class="tabcontent__descr">
-                    Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно
-                    просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
+                    Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
                 </div>
             </div>
             <div class="tabheader">
@@ -89,9 +82,7 @@
         <div class="offer__text">
             <h2 class="title">Что мы можем вам предложить?</h2>
             <div class="offer__descr">
-                Наша основная идея - это правильное питание. Оно может быть простым и вкусным. Мы не просто доставка, мы
-                сервис! Мы взяли на себя все расчеты БЖУ, калорийности, объемов порций и прочие важные, но скучные
-                аспекты. Вам остается только полезная, сытная и правильная еда, которую мы привозим прямо под дверь.
+                Наша основная идея - это правильное питание. Оно может быть простым и вкусным. Мы не просто доставка, мы сервис! Мы взяли на себя все расчеты БЖУ, калорийности, объемов порций и прочие важные, но скучные аспекты. Вам остается только полезная, сытная и правильная еда, которую мы привозим прямо под дверь.
             </div>
         </div>
         <div class="offer__action">
@@ -102,13 +93,11 @@
         <div class="offer__advantages">
             <h2>Быстро и полезно</h2>
             <div class="offer__advantages-text">
-                Готовка дома занимает много сил, времени и нервов. Мы привозим еду сразу на целый день, и ты можешь
-                действовать так, как тебе удобно, не подстраиваясь ни под кого и будучи уверенным в качестве продукта!
+                Готовка дома занимает много сил, времени и нервов. Мы привозим еду сразу на целый день, и ты можешь действовать так, как тебе удобно, не подстраиваясь ни под кого и будучи уверенным в качестве продукта!
             </div>
             <h2>Правильный рацион</h2>
             <div class="offer__advantages-text">
-                Мы разработали специальное меню, где учтены все нюансы правильного питания, от баланса БЖУ до их
-                приготовления и дробления рациона.
+                Мы разработали специальное меню, где учтены все нюансы правильного питания, от баланса БЖУ до их приготовления и дробления рациона.
             </div>
         </div>
         <div class="offer__slider">
@@ -127,7 +116,7 @@
                 <div class="offer__slide">
                     <img src="img/slider/pepper.jpg" alt="pepper">
                 </div>
-                <div class="offer__slide">
+                <!-- <div class="offer__slide">
                     <img src="img/slider/food-12.jpg" alt="food">
                 </div>
                 <div class="offer__slide">
@@ -135,7 +124,7 @@
                 </div>
                 <div class="offer__slide">
                     <img src="img/slider/paprika.jpg" alt="paprika">
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -161,7 +150,7 @@
             </div>
             <div class="calculating__choose calculating__choose_medium">
                 <input type="text" id="height" placeholder="Введите рост" class="calculating__choose-item">
-                <input type="text" id="weight" placeholder="Введите вес" class="calculating__choose-item">
+                <input type="text" id="weight" placeholder="Введите вес"  class="calculating__choose-item">
                 <input type="text" id="age" placeholder="Введите возраст" class="calculating__choose-item">
             </div>
 
@@ -169,9 +158,8 @@
                 Выберите вашу физическая активность
             </div>
             <div class="calculating__choose calculating__choose_big">
-                <div id="low" class="calculating__choose-item">Низкая активность</div>
-                <div id="small" class="calculating__choose-item calculating__choose-item_active">Невысокая активность
-                </div>
+                <div id="low" class="calculating__choose-item">Низкая активность </div>
+                <div id="small"  class="calculating__choose-item calculating__choose-item_active">Невысокая активность</div>
                 <div id="medium" class="calculating__choose-item">Умеренная активность</div>
                 <div id="high" class="calculating__choose-item">Высокая активность</div>
             </div>
@@ -197,45 +185,7 @@
 
     <div class="menu__field">
         <div class="container">
-            <div class="menu__item">
-                <img src="img/tabs/vegy.jpg" alt="vegy">
-                <h3 class="menu__item-subtitle">Меню "Фитнес"</h3>
-                <div class="menu__item-descr">Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих
-                    овощей и фруктов. Продукт активных и здоровых людей. Это абсолютно новый продукт с оптимальной ценой
-                    и высоким качеством!
-                </div>
-                <div class="menu__item-divider"></div>
-                <div class="menu__item-price">
-                    <div class="menu__item-cost">Цена:</div>
-                    <div class="menu__item-total"><span>229</span> грн/день</div>
-                </div>
-            </div>
-            <div class="menu__item">
-                <img src="img/tabs/elite.jpg" alt="elite">
-                <h3 class="menu__item-subtitle">Меню “Премиум”</h3>
-                <div class="menu__item-descr">В меню “Премиум” мы используем не только красивый дизайн упаковки, но и
-                    качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в
-                    ресторан!
-                </div>
-                <div class="menu__item-divider"></div>
-                <div class="menu__item-price">
-                    <div class="menu__item-cost">Цена:</div>
-                    <div class="menu__item-total"><span>550</span> грн/день</div>
-                </div>
-            </div>
-            <div class="menu__item">
-                <img src="img/tabs/post.jpg" alt="post">
-                <h3 class="menu__item-subtitle">Меню "Постное"</h3>
-                <div class="menu__item-descr">Меню “Постное” - это тщательный подбор ингредиент ов: полное отсутствие
-                    продуктов животного происхождения, молоко из миндаля, овса, кокоса или гречки, правильное количество
-                    белков за счет тофу и импортных вегетарианских стейков.
-                </div>
-                <div class="menu__item-divider"></div>
-                <div class="menu__item-price">
-                    <div class="menu__item-cost">Цена:</div>
-                    <div class="menu__item-total"><span>430</span> грн/день</div>
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
@@ -312,7 +262,7 @@
     <div class="modal__dialog">
         <div class="modal__content">
             <form action="#">
-                <div data-close class="modal__close">&times;</div>
+                <div class="modal__close">&times;</div>
                 <div class="modal__title">Мы свяжемся с вами как можно быстрее!</div>
                 <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
                 <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
@@ -321,8 +271,6 @@
         </div>
     </div>
 </div>
-
 <script src="js/script.js"></script>
-
 </body>
 </html>
